	PR target/41810 	* gthr-solaris.h (__gthread_mutex_destroy): Remove UNUSED. 	[SUPPORTS_WEAK && GTHREAD_USE_WEAK] (__gthread_active_p): Use 	__extension__ to allow cast from function pointer to object 	pointer in C++. 	* doc/install.texi (--enable-threads): Clarify use of Solaris 	threads.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154708 138bc75d-0d04-0410-961f-82ee72b054a4